--- a/pom.xml
+++ b/pom.xml
@@ -6,22 +6,29 @@
 
     <groupId>com.cttc</groupId>
     <artifactId>GateWayServer</artifactId>
+    <packaging>pom</packaging>
     <version>1.0</version>
-
+    <modules>
+        <module>ServiceVendor</module>
+        <module>GateWayApp</module>
+    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
         <lombok.version>1.16.18</lombok.version>
-    </properties>
+        <java.version>1.8</java.version>
 
+    </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.0.1.RELEASE</version>
     </parent>
+
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -34,22 +41,9 @@
         </dependencies>
     </dependencyManagement>
 
+
+
     <dependencies>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-gateway</artifactId>
-
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
