--- a/ServiceVendor/src/main/resources/application.properties
+++ b/ServiceVendor/src/main/resources/application.properties
@@ -2,4 +2,10 @@ server.port=8088
 spring.application.name=AUTH-SERVICE
 spring.profiles.active=first
 
-eureka.client.serviceUrl.defaultZone=http://eureka.didispace.com/eureka/
+eureka.client.serviceUrl.defaultZone=http://admin:123@eureka.yds.lan/eureka/
+
+logging.level.com.artisan.auth.AuthSl=DEBUG
+
+AUTH-SL.ribbon.ReadTimeout=2500
+
+transmit.slot.servlet.headers=userId,loginName,userSource
