--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,16 @@
     <modules>
         <module>ServiceVendor</module>
         <module>GateWayApp</module>
+        <module>AuthenticationService</module>
+        <module>ServiceConsumer</module>
+        <module>CooerTransmit</module>
     </modules>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
+        <fastjson.version>1.2.23</fastjson.version>
         <lombok.version>1.16.18</lombok.version>
         <java.version>1.8</java.version>
 
@@ -51,10 +55,27 @@
         </dependency>
 
         <dependency>
+            <groupId>com.artisan</groupId>
+            <artifactId>RedisClient</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
