--- a/ServiceVendor/src/main/resources/application.properties
+++ b/ServiceVendor/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=8088
-spring.application.name=AUTH-SERVICE
+spring.application.name=AUTH-VENDOR
 spring.profiles.active=first
+
+spring.jersey.application-path=rest
 
 eureka.client.serviceUrl.defaultZone=http://admin:123@eureka.yds.lan/eureka/
 
 logging.level.com.artisan.auth.AuthSl=DEBUG
 
 AUTH-SL.ribbon.ReadTimeout=2500
-
-transmit.slot.servlet.headers=userId,loginName,userSource
